manifests/base/gateway-class.yaml
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controller: cilium
