manifests/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: https
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-listener
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http
spec:
  gatewayClassName: cilium
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
